--- a/app/src/main/res/layout/donasi.xml
+++ b/app/src/main/res/layout/donasi.xml
@@ -1,58 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/gradient">
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo"/>
+        android:layout_height="match_parent">
     <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="#fff"
-            android:padding="10dp"
-            android:layout_margin="20dp">
+            android:background="@drawable/gradient">
 
-        <EditText
+        <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:hint="Nama"/>
-        <EditText
+                android:src="@drawable/logo"/>
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_margin="20dp"
-                android:layout_height="wrap_content"
-                android:hint="Email"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:hint="Komentar"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:hint="Jumlah Donasi"/>
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:textSize="20dp"
-                android:text="08289162892 -BCA-Admin "/>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#fff"
+                android:padding="10dp"
+                android:layout_margin="20dp">
 
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:text="Kirim"
-                android:textColor="#fff"
-                android:background="#1448E6"
-        android:layout_gravity="right"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:id="@+id/nama"
+                    android:hint="Nama"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_margin="20dp"
+                    android:id="@+id/email"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:id="@+id/komentar"
+                    android:hint="Komentar"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:id="@+id/jumlah_donasi"
+                    android:hint="Jumlah Donasi"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:textSize="20dp"
+                    android:text="08289162892 -BCA-Admin "/>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:background="#f5f5f5"
+                    android:layout_margin="15dp"
+                    android:orientation="vertical"
+                    android:id="@+id/buktitf"
+            >
+                <ImageView
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@android:drawable/ic_menu_upload"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="UPLOAD BUKTI TRANSFER"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:padding="10dp"/>
+            </LinearLayout>
+
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:text="Kirim"
+                    android:textColor="#fff"
+                    android:background="#1448E6"
+                    android:layout_gravity="right"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
