--- a/app/src/main/res/layout/daftar_donasi.xml
+++ b/app/src/main/res/layout/daftar_donasi.xml
@@ -22,25 +22,25 @@
             <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"
+                    android:src="@drawable/user"
                     android:layout_gravity="center"
                     android:layout_margin="15dp"
                     android:background="@drawable/shape_kotak"
-                    android:id="@+id/foto"/>
+                    android:id="@+id/Foto"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:textSize="25dp"
-                    android:id="@+id/judul"
+                    android:id="@+id/Judul"
                     android:text="Judul"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
-                    android:id="@+id/keterangan"
+                    android:id="@+id/Keterangan"
                     android:textSize="10dp"
                     android:text="Keterangan"/>
             <TextView
