--- a/app/src/main/res/layout/daftar_donasi.xml
+++ b/app/src/main/res/layout/daftar_donasi.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-             >
 
-    <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="#1D1D1D"
-            android:layout_margin="10dp"
-            >
+
+<android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="#1D1D1D"
+        android:layout_margin="10dp"
+        xmlns:android="http://schemas.android.com/apk/res/android">
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -20,19 +15,19 @@
                 android:background="@drawable/shape_kotak">
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
                     android:src="@drawable/user"
                     android:layout_gravity="center"
-                    android:layout_margin="15dp"
-                    android:background="@drawable/shape_kotak"
+                    android:padding="15dp"
+
                     android:id="@+id/Foto"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp"
+                    android:layout_margin="15dp"
+                    android:textSize="35dp"
                     android:id="@+id/Judul"
                     android:text="Judul"/>
             <TextView
@@ -41,7 +36,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:id="@+id/Keterangan"
-                    android:textSize="10dp"
+                    android:textSize="20dp"
                     android:text="Keterangan"/>
             <TextView
                     android:layout_width="wrap_content"
@@ -49,7 +44,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:id="@+id/donasiTercapai"
-                    android:textSize="15dp"
+                    android:textSize="25dp"
                     android:text="Donasi Tercapai"/>
             <TextView
                     android:layout_width="wrap_content"
@@ -57,7 +52,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:id="@+id/TotalDonasi"
-                    android:textSize="15dp"
+                    android:textSize="25dp"
                     android:text="Donasi yang diinginkan"/>
             <Button
                     android:layout_width="wrap_content"
@@ -72,4 +67,3 @@
     </android.support.v7.widget.CardView>
 
 
-</LinearLayout>
