--- a/app/src/main/res/xml/xml_security_network.xml
+++ b/app/src/main/res/xml/xml_security_network.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">10.10.20.166</domain>
+        <domain includeSubdomains="true">https://bantusodarakita.rdlvindonesia.com/api/</domain>
     </domain-config>
 </network-security-config>
